<resources>
    <string name="app_name">Right To Rise</string>
    <string name="header_home_text">A sliding demo text is to displayed here with a transition</string>
    <string name="about_us">About Us</string>
    <string name="training">Training</string>
    <string name="posh">POSH</string>
    <string name="consulting">Consulting</string>
    <string name="rkt_foundation">RKT Foundation</string>
    <string name="download">Downloads</string>
    <string name="videos">Videos</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact no.</string>
    <string name="company">Company</string>
    <string name="requirement">Requirements</string>
    <string name="submit">Submit</string>
    <string name="visit_website">Visit our website</string>
    <string name="webiste_name">www.right2rise.in</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="consultancy">Consultancy</string>
    <string name="description">Description</string>
    <string name="goverment_downloads">Goverment Downloads</string>
    <string name="general_downloads">General Downloads</string>
    <string name="additional_downloads">Additional Downloads</string>
    <string name="lets_know_posh">Lets know POSH</string>
    <string name="description_goverment_text">"Goverment description text  Goverment description text "</string>
    <string name="bare_act_posh">Bare Act (POSH Act)</string>
    <string name="bare_act_rules">Bare Act (Rules)</string>
    <string name="posh_100_posh_jano">POSH 100 POSH Jano</string>
    <string name="posh_101_practitionar">Posh 101 Practiotionar</string>
    <string name="posh_102_professional">POSH 102 Professional</string>
    <string name="icc_spa">POSH 103 ICC Specialist</string>
    <string name="posh_104_auditor">POSH 104 Auditor</string>
    <string name="posh_105_compliance">POSH 105 Compliance Specialist</string>
    <string name="posh_106_master_training">POSH 106 Master Training</string>
    <string name="posh_107_big_boss">POSH 107 BIG BOSS</string>
    <string name="summry_of_act">Summary of the Act</string>
    <string name="qna">QNA</string>
    <string name="annual_compliance">Annual Compliance Consultancy</string>
    <string name="external_audit_service">Externel Audit Service</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="our_company">Our Company</string>
    <string name="our_team">Our Team</string>
    <string name="core_belief">Core Belief</string>
    <string name="vision">Vision</string>
    <string name="mission">Mission</string>
    <string name="broucher">Broucher</string>
    <string name="core_values">Core Values</string>
</resources>
