<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:checked="true"
        android:checkable="true"
        android:id="@+id/home"
        android:title="@string/home">

    </item>
    <item
        android:checkable="true"
        android:id="@+id/about"
        android:enabled="true"
        android:icon="@drawable/rkt_about_us_icon"
        android:iconTint="@color/pinkColor"
        android:title="@string/about_us">

    </item>
    <item
        android:checkable="true"
        android:id="@+id/training"
        android:icon="@drawable/rkt_training_icon"
        android:title="@string/training"></item>
    <item
        android:checkable="true"
        android:id="@+id/consulting"
        android:icon="@drawable/rkt_consulting_icon"
        android:title="@string/consultancy"></item>
    <item
        android:checkable="true"
        android:id="@+id/posh"
        android:icon="@drawable/rkt_posh_icon"
        android:title="@string/posh"></item>
    <item
        android:checkable="true"
        android:id="@+id/rkt_foundation"
        android:icon="@drawable/rkt_rkt_icon"
        android:title="@string/rkt_foundation" />
    <item
        android:checkable="true"
        android:id="@+id/download"
        android:icon="@drawable/rkt_downloads_icon"
        android:title="@string/download" />
    <item
        android:checkable="true"
        android:id="@+id/videos"
        android:icon="@drawable/rkt_vidoes_icon"
        android:title="@string/videos" />
    <item
        android:checkable="true"
        android:id="@+id/contact"
        android:icon="@drawable/rkt_contact_us_icon"
        android:title="@string/contact_us" />

</menu>