<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.Contact_fragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_marginTop="@dimen/size_52"
            android:id="@+id/form_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    style="@style/accent_sub_title_text"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"></TextView>

                <EditText
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/back_input_pink"></EditText>
            </LinearLayout>
            <!--            row2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    style="@style/accent_sub_title_text"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"></TextView>

                <EditText
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/back_input_pink"></EditText>
            </LinearLayout>
            <!--            row 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    style="@style/accent_sub_title_text"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact_number"></TextView>

                <EditText
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/back_input_pink"></EditText>
            </LinearLayout>
            <!--            Row 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    style="@style/accent_sub_title_text"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/company"></TextView>

                <EditText
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/back_input_pink"></EditText>
            </LinearLayout>
            <!--            Row 5-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    style="@style/accent_sub_title_text"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/requirement"></TextView>

                <EditText
                    android:layout_width="0sp"
                    android:layout_height="@dimen/size_120"
                    android:layout_weight="2"
                    android:background="@drawable/back_input_pink"></EditText>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_18"
                android:background="@drawable/background_btn_accent"
                android:text="@string/submit"
                android:textColor="@color/colorPrimaryDark"></Button>


            <!--            Social Media -->

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/social_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/size_52"
                android:layout_height="@dimen/size_52"
                android:layout_marginRight="@dimen/size_8"
                android:background="@drawable/pink_circle">

                <ImageView
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_centerInParent="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/rkt_whatsapp_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/size_52"
                android:layout_height="@dimen/size_52"
                android:layout_marginRight="@dimen/size_8"
                android:background="@drawable/pink_circle">

                <ImageView
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_centerInParent="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/rkt_fb_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/size_52"
                android:layout_height="@dimen/size_52"
                android:layout_marginRight="@dimen/size_8"
                android:background="@drawable/pink_circle">

                <ImageView
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_centerInParent="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/rkt_quora_design" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/size_52"
                android:layout_height="@dimen/size_52"
                android:layout_marginRight="@dimen/size_8"
                android:background="@drawable/pink_circle">

                <ImageView
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_centerInParent="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/rkt_linkedin_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/size_52"
                android:layout_height="@dimen/size_52"
                android:layout_marginRight="@dimen/size_8"
                android:background="@drawable/pink_circle">

                <ImageView
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_centerInParent="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/rkt_insta_icon" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_12"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_website"
                android:textColor="@color/pinkColor"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_marginLeft="@dimen/size_4"
                style="@style/accent_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webiste_name"
                android:textStyle="italic"></TextView>

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>