<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Posh">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_52"
        android:orientation="vertical"
        android:padding="@dimen/padding_12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_52"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/header_goverment_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_pink_shadow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_12"
                    android:text="@string/bare_act_posh"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_18"></TextView>

                <ImageView
                    android:id="@+id/arrow_image_goverment"
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/size_10"
                    android:src="@drawable/rkt_arrow_down_icon" />
            </RelativeLayout>

            <TextView
                android:id="@+id/goverment_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_12"
                android:layout_marginRight="@dimen/padding_12"
                android:text="@string/description"
                android:visibility="gone"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_blue_shadow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_12"
                    android:text="@string/bare_act_rules"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_18"></TextView>

                <ImageView
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/size_10"
                    android:src="@drawable/rkt_arrow_down_icon" />
            </RelativeLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:visibility="gone"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_pink_shadow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_12"
                    android:text="@string/summry_of_act"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_18"></TextView>

                <ImageView
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/size_10"
                    android:src="@drawable/rkt_arrow_down_icon" />
            </RelativeLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:visibility="gone"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_blue_shadow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_12"
                    android:text="@string/qna"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_18" />

                <ImageView
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/size_10"
                    android:src="@drawable/rkt_arrow_down_icon" />
            </RelativeLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:visibility="gone"></TextView>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>